# Generative_AI

CloudNative_AI/: compose.yaml
CloudNative_AI/fastapi_helloworld/: pyproject.toml
CloudNative_AI/fastapi_helloworld/fastapi_helloworld/: main.py
CloudNative_AI/fastapi_helloworld/tests/: test_main.py
CloudNative_AI/helloworld/: dockerfile  pyproject.toml
CloudNative_AI/helloworld/helloworld/: main.py
CloudNative_AI/project_youtube/: pyproject.toml
CloudNative_AI/project_youtube/project_youtube/: main.py
CloudNative_AI/project_youtube/tests/: test_myproject.py
api/02_pydantic/: code.ipynb  model.ipynb  validators.ipynb
api/05_docstring/: pydocs.ipynb
chatgpt/01_hello_world/: hello_world.ipynb
chatgpt/02_multiple_roles/: multiple_rules.ipynb
chatgpt/03_streaming_response/: streaming_response.ipynb
chatgpt/04_json_mode/: json_mode.ipynb
chatgpt/05_function_calling/: function_calling.ipynb
chatgpt/06_assistants_code_interpreter/: assistants_code_interpreter.ipynb
chatgpt/07_assistants_knowledge_retrieval/: assistants_knowledge_retrieval.ipynb
chatgpt/08_assistants_function_calling/: assistants_function_calling.ipynb
chatgpt/11_fine_tuning/: .env  app.ipynb
everything_is_API/01_requests/: requests.ipynb
everything_is_an_api/01_requests/: requests.ipynb
streamlit/00_helloworld/: hello.py
streamlit/01_magic/: magic.py
streamlit/02_basics/: basics.py
streamlit/05_session_state/: 2_counter_callbacks.py  3_counter_callbacks_args.py
streamlit/connect/: pets.db
streamlit/helloworld/: hello.py
universityGPT/: hello.ipynb
(+19 files in other folders)
