[tool.poetry]
name = "fastapi-helloworld"
version = "0.1.0"
description = ""
authors = ["my-name <wasim_iqbal@msn.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
